# UEIDAQ-System

./: CMakeLists.txt  DAQ_Settings.json  main.cpp  maincpp  udp_plotter.py  ueipac_sim_sender.py
include/daq/: DaqAI217.hpp  UeiDaqDevice.hpp
include/net/: UdpSender.hpp
include/utils/: ConfigLoader.hpp  UeiStructs.h
src/daq/: DaqAI217.cpp
src/net/: UdpSender.cpp
src/utils/: ConfigLoader.cpp
